<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sliding Messaging</string>
    <string name="app_name_in_app">Messaging</string>
    <string name="menu_settings">Settings</string>
    <string name="send_button">Send</string>
    <string name="type_message">Type message</string>
    <string name="chars">1/160</string>
    <string name="placeholder">Placeholder</string>
    <string name="contact_entry">To</string>
    <string name="about">Created by Jacob Klinker</string>
    <string name="menu_new_message">New Message</string>
    <string name="quick_reply">Quick Reply</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_summary">Check to enable dark theme</string>
    <string name="text_size">Text Size</string>
    <string name="text_size_summary">Choose text size of messages</string>
    <string name="text_size2_summary">Choose text size of conversations</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_summary">Check to enable notifications</string>
    <string name="ringtone">Ringtone</string>
    <string name="ringtone_summary">Select ringtone</string>
    <string name="page_or_menu">Sliding Menu Mode</string>
    <string name="page_or_menu_summary">Select method of getting to conversation list/new message</string>
    <string name="theme">Theme Settings</string>
    <string name="dark_theme_quick_reply">Quick Reply Dark Theme</string>
    <string name="dark_theme_quick_reply_summary">Check to enable dark theme on quick reply</string>
    <string name="menu_about">About</string>
    <string name="delete_message">Do you want to delete this message?</string>
    <string name="delete_messages">Do you want to delete these messages?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="restart_1">After changing the theme, application must be restarted</string>
    <string name="restart_2">Restart Sliding Messaging</string>
    <string name="title_color">Title Bar Color</string>
    <string name="title_color_summary">Choose the title bar color (also applies to line above messages when pitch black theme is on and title bar disabled)</string>
    <string name="delivery_reports">Delivery Reports</string>
    <string name="popup_reply">Popup Reply</string>
    <string name="popup_reply_summary">Adds a quick reply that automatically appears when new message received</string>
    <string name="text_saved">Text saved to clipboard</string>
    <string name="draft_saved">Draft saved to clipboard</string>
    <string name="hour_format">24 Hour Timestamp</string>
    <string name="hide_title_bar">Show Title Bar</string>
    <string name="hide_title_bar_summary">Check to show the title bar</string>
    <string name="strip_unicode">Strip Unicode</string>
    <string name="strip_unicode_summary">Substitute GSM compatible character for all characters not supported in 160 character SMS messages</string>
    <string name="other">Other Settings</string>
    <string name="ok">OK</string>
    <string name="emoji">Enable Emojis</string>
    <string name="donate">Pro Version</string>
    <string name="donate_summary">Get tons more features and much more frequent updates</string>
    <string name="load_messages">Messages to Load</string>
    <string name="load_messages_summary">Select the number of messages to be initially loaded</string>
    <string name="load_all">Load All Conversations</string>
    <string name="limit_messages">Limit Messages</string>
    <string name="limit_messages_summary">Limits the amount of messages initially loaded</string>
    <string name="pull_to_refresh">Pull to Load All Messages</string>
    <string name="vibrate">Vibrate on Notification</string>
    <string name="override">Override Stock Messaging</string>
    <string name="override_summary">Will save message to inbox and abort broadcast to other texting apps, stopping notifications. May stop Light Flow notifications</string>
	<string name="open_contact_menu">Open Contact List at Startup</string>
	<string name="open_contact_menu_summary">Opens the left side menu at app startup</string>
	<string name="contact_pictures">Display Contact Pictures</string>
	<string name="enable_view_conversation">Enable Popup Expanded Options</string>
	<string name="enable_view_conversation_summary">Shows the view conversation and delete buttons at the bottom of the quick reply dialog</string>
	<string name="mobile_only">Mobile Numbers Only</string>
	<string name="mobile_only_summary">Display only mobile numbers when searching through contacts for new message</string>
	<string name="keyboard_type">Smiley Button</string>
	<string name="keyboard_type_summary">Show the smiley button on the keyboard</string>
	<string name="override_lang">Override System Language</string>
	<string name="override_lang_summary">Sets language to English</string>
	<string name="signature">Select Signature</string>
	<string name="smilies">Smilies to be Displayed</string>
	<string name="smilies_summary">Selected how smilies should be displayed</string>
	<string name="show_keyboard">Hide Keyboard</string>
	<string name="show_keyboard_summary">Automatically hides the keyboard once you have sent a message</string>
	<string name="notification_icon">Notification Icon Color</string>
	<string name="title_caps">Title Bar Capital Letters</string>
	<string name="title_caps_summary">If checked, displays title bar name in all capital letters</string>
    <string name="advanced_theme">Advanced Theme Settings</string>
    <string name="advanced_notifications">Advanced Notifications Settings</string>
    <string name="advanced_other">Other Advanced Settings</string>
	<string name="advanced_settings">Advanced Settings</string>
    <string name="title_bar_settings">Title Bar Settings</string>
    <string name="title_contact_image">Action Bar Contact Images</string>
    <string name="title_contact_image_summary">Shows the current conversation\'s contact picture on the Action Bar</string>
    <string name="custom_background">Custom Background for Menus</string>
    <string name="custom_background_summary">Choose a custom background to apply to the sliding menus</string>
    <string name="custom_background2">Custom Background for Messages</string>
    <string name="custom_background2_summary">Choose a custom background to apply to the messages</string>
    <string name="menu_delete">Delete all conversations</string>
    <string name="text_settings">Message Settings</string>
    <string name="emoji_type">Android Style Emojis</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="always_show_contact_info">Contact Information in Action Bar</string>
    <string name="always_show_contact_info_summary">Force contact information to always be shown in the Action Bar, even when title bar is enabled</string>
    <string name="delete_old">Delete Old Messages</string>
    <string name="sms_limit">SMS Limit</string>
    <string name="sms_limit_summary">Number of SMS messages to keep</string>
    <string name="conversation_settings">Conversation List Settings</string>
    <string name="quick_text">Quick Text Notification</string>
    <string name="quick_text_summary">Creates notification that allows you to text any contact without leaving your current app</string>
	<string name="background_service">Run as background service</string>
	<string name="background_service_summary">Experimental: Will help to increase initial startup time, does not affect battery life</string>
	<string name="custom_theme_prefs">Custom Theme Settings</string>
	<string name="ct_custom_font">Custom Font</string>
	<string name="backup_settings">Backup Settings</string>
	<string name="backup">Backup all settings</string>
	<string name="restore">Restore all backed up settings</string>
	<string name="breath">Notification Breath Animation</string>
	<string name="breath_summary">Will cause the icon displayed on the status bar to flash on and off. Only applies to white stock icon. Will not work with Dynamic Notifications.</string>
	<string name="text_alignment">Text Alignment</string>
	<string name="mms_settings">MMS Settings</string>
	<string name="run_as">Choose Display Layout</string>
	<string name="display_contact_cards">Display Contact Cards</string>
	<string name="display_contact_cards_summary">Enables or disables cards at the top of each message list</string>
	<string name="display_contact_names">Display Contact Names in Action Bar</string>
	<string name="open_to_first">Open to First Conversation</string>
	<string name="simple_cards">Draw Simple Cards</string>
	<string name="simple_cards_summary">Draws cards without drop shadow and may help improve performance</string>
	<string name="popup_settings">Popup Settings</string>
	<string name="use_old_popup">Use Old Popup</string>
	<string name="show_keyboard_popup">Show Keyboard on Start</string>
	<string name="show_keyboard_popup_summary">Shows the keyboard when the popup is on screen automatically</string>
	<string name="quick_templates">Manage Quick Templates</string>
	<string name="send_with_return">Send Message with Return Key</string>
	<string name="send_with_return_summary">Message will be sent with the return key instead of adding a return</string>
	<string name="halo_popup">Multiwindow Popup</string>
	<string name="halo_popup_summary">For use with custom ROMs with multiwindow (HALO) functionality only. Will launch full app in multiwindow mode instead of just the popup when notification received</string>
	<string name="individual_notification_settings">Individual Notification Settings</string>
	<string name="individual_notification_settings_summary"></string>
	<string name="experimental">Experimental</string>
	<string name="save_to_external">Save To External SD</string>
	<string name="save_to_external_summary">Saves some data such as individual notifications and blacklist settings to the external SD card instead of internally</string>
	<string name="split_sms">Split SMS Messages</string>
	<string name="split_sms_summary">Will split messages into compatible lengths. For use if you have trouble sending long messages with your carrier</string>
	<string name="top_actionbar">Action Bar on Top</string>
	<string name="top_actionbar_summary">Will move action bar to top of screen on card layout</string>
    <string name="popup_theme">Custom Popup Theme Settings</string>
    <string name="popup_theme_summary">Only applicable when using the new popup</string>
    <string name="split_counter">Show Message Counter</string>
    <string name="split_counter_summary">Adds a counter in front of split messages to keep them in correct order. Example: (1/3)</string>
    <string name="full_app_popup">Use SlideOver for Popup</string>
    <string name="full_app_popup_summary">Replaces popup with a fully functioning version of the app that shows as a dialog box over other apps instead of taking the entire screen</string>
    <string name="slideover_popup_lockscreen_only">SlideOver Popup after lockscreen Only</string>
    <string name="slideover_popup_lockscreen_only_summary">Only show the popup when you have unlocked the device and there is a new message, otherwise let the SlideOver bubble handle new messages</string>
    <string name="show_advanced_settings">Show All Settings</string>
    <string name="show_advanced_settings_summary">Enables all hidden settings</string>
    <string name="override_speed">Override for Performance</string>
    <string name="override_speed_summary">Override some custom app settings for the most optimized/quickest behavior.\nNOTE: Disables some settings, including contact pictures and some emoji settings</string>
    <string name="close_halo_after_send">Close halo popup after sending the message</string>
    <string name="close_halo_after_send_summary">Does not affect regular halo usage</string>
</resources>