<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
<!--     <Preference  -->
<!--         android:key="donate" -->
<!--         android:title="@string/donate" -->
<!--         android:summary="@string/donate_summary" -->
<!--     /> -->
    
    <PreferenceCategory
        android:title="@string/theme"
        android:key="theme_category" >
        
        <ListPreference
            android:key="run_as"
            android:title="@string/run_as"
            android:defaultValue="sliding"
            android:entries="@array/runAs"
        	android:entryValues="@array/runAsInserted"
    	/>
        
        <ListPreference 
            android:key="card_theme"
            android:title="@string/theme"
            android:defaultValue="Light"
            android:entries="@array/cardTheme"
            android:entryValues="@array/cardThemeInserted"
        />
        
        <Preference
            android:key="font_settings"
            android:title="@string/ct_custom_font"
        />
        
<!--         <Preference -->
<!--             android:key="gesture_settings" -->
<!--             android:title="@string/gesture_settings" -->
<!--         /> -->
        
        <CheckBoxPreference
            android:key="display_contact_cards"
            android:title="@string/display_contact_cards"
            android:summary="@string/display_contact_cards_summary"
            android:defaultValue="false"
        />
        
        <CheckBoxPreference
            android:key="display_contact_names"
            android:title="@string/display_contact_names"
            android:defaultValue="false"
        />
        
        <CheckBoxPreference
            android:key="simple_cards"
            android:title="@string/simple_cards"
            android:summary="@string/simple_cards_summary"
            android:defaultValue="true"
        />
        
        <CheckBoxPreference
            android:key="top_actionbar"
            android:title="@string/top_actionbar"
            android:summary="@string/top_actionbar_summary"
            android:defaultValue="false"
        />
        
        <CheckBoxPreference
            android:key="hour_format"
            android:title="@string/hour_format"
            android:defaultValue="false"
        />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/notification_settings"
        android:key="notifications_category" >
        
        <CheckBoxPreference 
        	android:key="notifications"
        	android:title="@string/notifications"
        	android:summary="@string/notifications_summary"
        	android:defaultValue="true"  
        />
        
        <ListPreference 
        	android:key="notification_icon"
        	android:title="@string/notification_icon"
        	android:defaultValue="white"
        	android:entries="@array/notificationIcon"
        	android:entryValues="@array/notificationIconInserted"
        	android:dependency="notifications"
        />
        
        <CheckBoxPreference
            android:key="breath"
            android:title="@string/breath"
            android:summary="@string/breath_summary"
            android:defaultValue="false"
            android:dependency="notifications"
        />
        
        <RingtonePreference
        	android:key="ringtone"
        	android:title="@string/ringtone"
        	android:summary="@string/ringtone_summary"
        	android:dependency="notifications"
        	android:ringtoneType="notification"
        	android:defaultValue="content://settings/system/notification_sound"
        />
        
        <Preference
            android:key="popup_settings"
            android:title="@string/popup_settings"
        />
        
        <Preference 
            android:key="individual_notification_settings"
            android:title="@string/individual_notification_settings"
            android:summary="@string/individual_notification_settings_summary"
        />
        
        <Preference
            android:key="notification_advanced"
            android:title="@string/advanced_notifications"
            android:dependency="notifications"
        />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/other"
        android:key="other_category" >
        
        <Preference
            android:key="mms_settings"
            android:title="@string/mms_settings"
        />
        
        <ListPreference 
        	android:key="smilies"
        	android:title="@string/smilies"
        	android:summary="@string/smilies_summary"
        	android:defaultValue="with"
        	android:entries="@array/smilies"
        	android:entryValues="@array/smiliesInserted"
        />
        
        <CheckBoxPreference 
        	android:key="strip_unicode"
        	android:title="@string/strip_unicode"
        	android:summary="@string/strip_unicode_summary"
        	android:defaultValue="false"  
        />
        
        <CheckBoxPreference
            android:key="emoji"
            android:title="@string/emoji"
            android:defaultValue="false"
        />
        
        <EditTextPreference
            android:key="signature"
            android:title="@string/signature"
            android:dialogTitle="@string/signature"
            android:defaultValue=""
        />
        
        <Preference 
            android:key="quick_templates"
            android:title="@string/quick_templates"
        />
    </PreferenceCategory>
    
    <Preference 
        android:key="advanced" 
        android:title="@string/advanced_settings" 
    />
    
    <Preference 
        android:key="delete_all"
        android:title="@string/menu_delete" 
    />
    
</PreferenceScreen>